--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,8 +20,9 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2.3.4
       - name: Set up java
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
+          distribution: 'zulu'
           java-version: ${{ matrix.java }}
       - name: Cache Gradle
         uses: actions/cache@v2.1.5
